correct --section-footer-align in .section-footer

--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -219,11 +219,11 @@ a:active {
 
 .section-footer {
   padding: var(--section-footer-padding);
-  text-align: var(--section-header-align);
+  text-align: var(--section-footer-align);
 }
 .section-title {
   font-family: var(--font-family-title);
-  font-size: var(font-size-xx-large);
+  font-size: var(--font-size-xx-large);
   font-weight: var(--font-weight-bold);
   margin: var(--section-title-margin);
   color: var(--section-title-color);
